fixed username overflow

--- a/src/components/SetUsername/index.css
+++ b/src/components/SetUsername/index.css
@@ -53,7 +53,8 @@
         font-size: 30px;
     }
     .userContent{
-        padding: 65px;
+        padding: 24px;
+        width: 80%;
         height: 45%;
     }
 }
